# wget2hugo

./: .gitignore  Cargo.toml  LICENSE.md  README.md  convert.go  go.mod  go.sum  rustfmt.toml  wget2hugo.go
converter/: converter.go  converter_test.go
src/: conversion.rs  ioutil.rs  main.rs
util/: util.go  util_test.go
