[package]
name = "wget2hugo"
version = "0.1.0"
edition = "2021"
authors = [ "Alice Pote" ]
homepage = "https://github.com/alicewriteswrongs/wget2hugo"
repository = "https://github.com/alicewriteswrongs/wget2hugo"
description = "A small utility for converting a wget backup to markdown"
license = "mit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html2md = "0.2.13"
clap = "3.0.0-beta.4"
walkdir = "2.3.2"
chardetng = "0.1.14"
encoding_rs = "0.8.28"
regex = "1.5.4"
env_logger = "0.9.0"
log = "0.4.14"
